# TextGenerator

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: chatbot.py  gemini-2.0-flash-lite.py  gpt-4.1-nano.py  summarise_conversation.py
text_generator/: __init__.py  client.py  error.py  models.py  prompts.py
text_generator/clients/: __init__.py  abstract_client.py  gemini_client.py  openai_client.py
