[project]
name = "text-generator"
version = "0.1.0"
description = ""
authors = [{ name = "Edward J. Parkinson", email = "e.parkinson@soton.ac.uk" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.90.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[tool.poetry]
packages = [{ include = "text_generator" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "ruff"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py311"

select = ["ALL"]
ignore = ["E501", "COM812", "S311", "S101", "D100", "ANN401", "PGH003"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
